feat: add parameters line

--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -40,4 +40,5 @@
     --fs-medium: clamp(1.2rem, 1vw, 3rem);
     --fs-small: clamp(1rem, 2vw, 1.6rem);
     --fs-very-small: clamp(0.5rem, 1vw, 1.3rem);
+    --fs-smallest: clamp(0.5rem, 0.9vw, 1.1rem);
 }
