feat: add price range and finish page store

--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -12,6 +12,7 @@
     --color-white-alpha: hsla(0, 0%, 100%, 80%);
     --color-danger: hsl(0, 81%, 44%);
     --color-black: hsl(0, 0%, 0%);
+    --color-input: hsla(0, 0%, 85%, 1);
     --drop-shadow-white: 0 0 2rem var(--color-white),
         0 0 0.2rem var(--color-white);
     --drop-shadow-light: 0 0 2rem var(--color-primary),
