--- a/eCommerce-Application/src/styles/index.scss
+++ b/eCommerce-Application/src/styles/index.scss
@@ -11,6 +11,8 @@
 @use './components/form';
 @use './components/placeholder';
 @use './components/errors';
+@use './components/dropdown';
+
 @use './components/modal';
 @use './components/slider';
 
@@ -23,6 +25,7 @@
 @use './layout/footer';
 
 @use './pages/login';
+@use './pages/profile';
 @use './pages/main';
 @use './pages/registration';
 @use './pages/store';
