--- a/eCommerce-Application/src/styles/base/_typography.scss
+++ b/eCommerce-Application/src/styles/base/_typography.scss
@@ -343,3 +343,18 @@
 .bread-crumbs {
     font-size: var(--fs-medium);
 }
+
+.profile {
+    &__title {
+        font-family: var(--fs-secondary);
+        font-size: var(--fs-big);
+        color: var(--color-white);
+    }
+
+    &__info-title {
+        font-family: var(--fs-secondary);
+        font-size: 1rem;
+        // font-size: var(--fs-small);
+        color: var(--color-primary);
+    }
+}
