--- a/eCommerce-Application/src/styles/index.scss
+++ b/eCommerce-Application/src/styles/index.scss
@@ -17,6 +17,7 @@
 @use './layout/home';
 @use './layout/attainments';
 @use './layout/catalog';
+@use './layout/product';
 @use './layout/error-page';
 @use './layout/footer';
 
