--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -156,6 +156,27 @@
             margin-left: -0.5em;
         }
     }
+
+    &--product {
+        width: min-content;
+        min-width: 15ch;
+        background-color: var(--color-secondary);
+
+        @include mixins.respond-to('tablet') {
+            padding-inline: 2em;
+        }
+    }
+
+    &--item {
+        padding: 0.5em 1.5em;
+        border: 2px solid var(--color-primary);
+
+        transition: background-color 0.3s ease-in-out;
+
+        &:hover {
+            background-color: var(--color-primary);
+        }
+    }
 }
 
 .arrow {
