--- a/eCommerce-Application/src/styles/pages/_store.scss
+++ b/eCommerce-Application/src/styles/pages/_store.scss
@@ -252,31 +252,43 @@ input[type='range']::-moz-range-thumb {
 
 .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(22rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(22rem, 0.33fr));
     gap: 5rem;
 
     margin: 4rem auto;
 }
 
 .card {
-    height: 100%;
+    min-height: 40rem;
+    padding-bottom: 0;
 
     background-color: var(--color-primary-opacity);
+    border: 3px solid var(--color-primary);
 
-    .card__description {
-        padding: 0.2rem 1rem 2rem 2rem;
+    &:hover {
+        transform: translateY(-2rem);
+        transition: all 0.3s;
+
+        box-shadow: 10px 10px 100px var(--color-primary);
     }
 
-    .card__details {
+    &__content {
+        @include mixins.flex(column, space-between, flex-start);
+        min-height: 20rem;
+        gap: 0.5rem;
+        padding: 0.2rem 1rem 1rem 2rem;
+    }
+
+    &__details {
         @include mixins.flex(row, space-between, center);
     }
 
-    .card__img {
+    &__img {
         width: 100%;
     }
 
-    .card__price {
-        width: 50%;
+    &__price {
+        width: 70%;
         margin-top: 3rem;
 
         font-size: var(--fs-medium-big);
@@ -301,7 +313,7 @@ input[type='range']::-moz-range-thumb {
         }
     }
 
-    .card__icons {
+    &__icons {
         @include mixins.flex(row, space-between, center);
 
         width: 35%;
@@ -310,9 +322,30 @@ input[type='range']::-moz-range-thumb {
             width: 100%;
         }
     }
-    .card__title {
+    &__title {
         margin-top: 2rem;
 
         font-size: var(--fs-very-small);
+    }
+    &__description {
+        height: 0;
+
+        transform: scale(1, 0);
+        transform-origin: top;
+
+        transition: 0.3s;
+
+        &_open {
+            height: auto;
+            transform: scale(1, 1);
+        }
+        &__btn {
+            align-self: flex-end;
+            padding: 0.5rem 1rem;
+
+            background-color: var(--color-primary);
+
+            cursor: pointer;
+        }
     }
 }
