feat: add slider, new fonts and products description

--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -34,6 +34,8 @@
     --ff-secondary: 'Bowler', sans-serif;
     --ff-product: 'Zekton Rg', sans-serif;
     --ff-errors: Arial, Helvetica, sans-serif;
+    --ff-alien: 'Stray Robotalk', 'Zekton Rg', sans-serif;
+    --ff-predator: 'Predator', sans-serif;
 
     --fs-title: clamp(1.4rem, 4vw, 10rem);
     --fs-logo: clamp(4rem, 5vw, 9rem);
