--- a/eCommerce-Application/src/styles/index.scss
+++ b/eCommerce-Application/src/styles/index.scss
@@ -12,6 +12,7 @@
 @use './components/placeholder';
 @use './components/errors';
 @use './components/modal';
+@use './components/slider';
 
 @use './layout/header';
 @use './layout/home';
