--- a/eCommerce-Application/src/styles/layout/_product.scss
+++ b/eCommerce-Application/src/styles/layout/_product.scss
@@ -19,6 +19,8 @@
 
     @include mixins.respond-to('desktop') {
         column-gap: 5rem;
+
+        padding-block: 5rem 8rem;
     }
 
     &__path {
@@ -31,7 +33,7 @@
         @include mixins.respond-to('desktop') {
             grid-column: 2;
 
-            padding-block: 2rem;
+            padding-block: 0;
         }
     }
 
@@ -78,6 +80,10 @@
                 'img img details details details'
                 'review review review review review';
             grid-template-columns: minmax(0, 12rem) repeat(4, 1fr);
+            grid-template-rows:
+                minmax(48rem, 1fr)
+                min-content;
+            // grid-auto-rows: minmax(50%, 1fr) auto;
         }
     }
 
@@ -127,11 +133,19 @@
             grid-column: 1 / span 2;
 
             display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+
             place-content: center;
-            column-gap: 1rem;
+            gap: 1rem;
+
+            @include mixins.respond-to('tablet') {
+                grid-template-rows: min-content min-content auto;
+                grid-auto-rows: 100%;
+                row-gap: 2rem;
+            }
 
             @include mixins.respond-to('desktop') {
-                place-content: center;
+                place-content: inherit;
                 column-gap: 2rem;
             }
 
@@ -141,6 +155,12 @@
 
             & *:nth-child(2) {
                 grid-column: 2;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         }
     }
@@ -172,7 +192,7 @@
             @include mixins.respond-to('desktop') {
                 min-height: 20rem;
 
-                padding: 3rem;
+                padding: 1.5rem 3rem 2rem 3rem;
             }
         }
 
@@ -206,6 +226,10 @@
                     color: var(--color-primary);
                     opacity: 1;
                 }
+            }
+
+            &--inactive {
+                display: none;
             }
         }
 
@@ -249,8 +273,9 @@
 
         @include mixins.respond-to('desktop') {
             --gap: 2vw;
-
             grid-row: 2;
+
+            height: fit-content;
 
             padding: 3rem;
         }
@@ -264,7 +289,7 @@
 
         @include mixins.respond-to('tablet') {
             --gap: 2rem;
-            @include mixins.flex(null, space-between, center);
+            @include mixins.flex(null, space-between, stretch);
             flex-wrap: wrap;
 
             & > * {
@@ -277,7 +302,9 @@
         }
 
         @include mixins.respond-to('desktop') {
-            --gap: 4rem;
+            --gap: 2rem;
+
+            margin-top: 3rem;
         }
     }
 }
