--- a/eCommerce-Application/src/styles/components/_slider.scss
+++ b/eCommerce-Application/src/styles/components/_slider.scss
@@ -1,23 +1,40 @@
+@use '../abstracts/mixins';
+
 .slider {
     &-arrow {
         color: var(--color-white);
+
+        &:after {
+            font-size: 2rem;
+
+            @include mixins.respond-to('tablet') {
+                font-size: var(--fs-big);
+            }
+        }
     }
 }
 
 .swiper {
-    // &-wrapper {
-    //     cursor: grab;
-    // }
+    width: 100%;
     height: 100%;
-    // height: fit-content;
+
+    &-container,
+    &-container2 {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
 
     &-slide {
         height: auto;
-    }
 
-    // &-pagination {
-    //     top: 80%;
-    // }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 
     &-pagination-bullet {
         background-color: var(--color-white);
@@ -28,5 +45,17 @@
 
             opacity: 1;
         }
+    }
+
+    &-pagination2 {
+        position: absolute;
+        text-align: center;
+        transition: 300ms opacity;
+        transform: translate3d(0, 0, 0);
+        z-index: 10;
+    }
+
+    &-scrollbar-drag {
+        background-color: var(--color-white);
     }
 }
