--- a/eCommerce-Application/src/styles/components/_form.scss
+++ b/eCommerce-Application/src/styles/components/_form.scss
@@ -122,6 +122,7 @@
             display: grid;
             grid-template-columns: 1fr;
             gap: 3.5rem;
+            align-items: center;
 
             @include mixins.respond-to('tablet') {
                 grid-template-columns: 1fr 1fr;
