--- a/eCommerce-Application/src/styles/pages/_profile.scss
+++ b/eCommerce-Application/src/styles/pages/_profile.scss
@@ -64,6 +64,29 @@
             margin-top: 6rem;
             gap: 0;
         }
+
+        &-form {
+            color: var(--color-white);
+            border: none;
+        }
+
+        &-country {
+            background-color: transparent;
+            min-height: 0;
+            outline: 1px solid var(--color-secondary);
+            border-radius: 0;
+        }
+        &-menu {
+            background-color: var(--color-secondary);
+        }
+        &-input {
+            &:focus {
+                background-color: var(--color-secondary);
+            }
+        }
+        &_invalid {
+            outline: 1px solid var(--color-danger);
+        }
     }
 
     &__button {
